--- a/index.html
+++ b/index.html
@@ -59,17 +59,18 @@
         </audio>
 
 		<div>
-            <button onclick="play1()">A</button>
-			<button onclick="play2()">S</button>
-			<button onclick="play3()">D</button>
-			<button onclick="play4()">F</button>
-			<button onclick="play5()">G</button>
-			<button onclick="play6()">H</button>
-			<button onclick="play7()">I</button>
-			<button onclick="play8()">J</button>
-			<button onclick="play9()">K</button>
-            <button onclick="play10()">L</button>
-		</div>
+            <button class="bt" onclick="play1()">A</button>
+			<button class="bt" onclick="play2()">S</button>
+			<button class="bt" onclick="play3()">D</button>
+			<button class="bt" onclick="play4()">F</button>
+			<button class="bt" onclick="play5()">G</button>
+			<button class="bt" onclick="play6()">H</button>
+			<button class="bt" onclick="play7()">I</button>
+			<button class="bt" onclick="play8()">J</button>
+			<button class="bt" onclick="play9()">K</button>
+            <button class="bt" onclick="play10()">L</button>
+        </div><br>
+            <div><a class="bt" href="#" onclick="stop()">Parar</a></div>
     </header>
     <script src="script.js"></script>
 </body>
